--- a/Slovak/main/CloudBackup.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CloudBackup.apk/res/values-sk/strings.xml
@@ -111,7 +111,7 @@ Poznámka: Dáta doinštalovaných aplikácií nebudú zálohované na Xiaomi Cl
     <string name="cloud_backup_detail_manage">Spravovať zálohy</string>
     <string name="cloud_backup_detail_manage_summary">Zálohy: %1$s, Veľkosť: %2$s</string>
     <string name="cloud_backup_detail_state">MiCloud záloha</string>
-    <string name="cloud_backup_detail_state_summary">Apl, Nastavenie plochy a systému</string>
+    <string name="cloud_backup_detail_state_summary">Aplikácie, Nastavenie plochy a systému</string>
     <string name="cloud_backup_detail_time">Zálohované: %1$s</string>
     <string name="cloud_backup_have_data">Nájdená záloha v MiCloud</string>
     <string name="cloud_backup_in_cancel">Zrušiť</string>
