--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -13,10 +13,10 @@ Ak vyberiete nepoužívať prispôsobené reklamy, ich počet sa nezníži ale n
     <string name="about_settings">Info o telefóne</string>
     <string name="about_settings_summary">Zobrazí právne informácie, stav a verziu softwaru</string>
     <string name="ac_enable_summary">Pre otvorenie aplikácií bude požadované heslo</string>
-    <string name="ac_enable_title">Uzamknúť jednotlivé apl.</string>
+    <string name="ac_enable_title">Uzamknúť jednotlivé aplikácie</string>
     <string name="ac_privacy_mode_sum">Pre deaktivovanie súkromného režimu vložte vaše prístupové heslo</string>
     <string name="ac_privacy_mode_title">Chrániť režim súkromia</string>
-    <string name="ac_set_apps_title">Vybrať apl. pre uzamknutie</string>
+    <string name="ac_set_apps_title">Vybrať aplikácie pre uzamknutie</string>
     <string name="accelerometer_summary_off">Pri otáčaní telefónu automaticky prepínať orientáciu</string>
     <string name="accelerometer_summary_on">Pri otáčaní telefónu automaticky prepínať orientáciu</string>
     <string name="accelerometer_title">Auto otočenie obrazovky</string>
@@ -88,7 +88,7 @@ Ak chcete použiť túto funkciu, zapnite ponuku dostupnosti a potom klepnite na
     <string name="accessibility_no_services_installed">Žiadna služba nie je nainštalovaná</string>
     <string name="accessibility_no_wifi">Wi-Fi odpojené.</string>
     <string name="accessibility_personal_account_title">Osobný účet – %s</string>
-    <string name="accessibility_power_button_ends_call_prerefence_title">Tlač. zapínania ukončí hovor</string>
+    <string name="accessibility_power_button_ends_call_prerefence_title">Tlačidlo zapínania ukončí hovor</string>
     <string name="accessibility_screen_magnification_enable">Gestá zväčšenia</string>
     <string name="accessibility_screen_magnification_summary">"Keď je táto funkcia zapnutá, môžete približovať alebo odďaľovať trojitým klepnutím na obrazovku.
 
@@ -448,7 +448,7 @@ Správca môže sledovať a spravovať nastavenia, prístup, aplikácie a údaje
     <string name="app_function">Funkcie aplikácie</string>
     <string name="app_install_location_summary">Zmena preferovaného umiestnenia pre inštaláciu nových aplikácií</string>
     <string name="app_install_location_title">Preferované umiestnenie pre inštaláciu</string>
-    <string name="app_invisible">Neviditeľná apl.</string>
+    <string name="app_invisible">Neviditeľná aplikácia</string>
     <string name="app_launch_domain_links_title">Odkazy aplikácií</string>
     <string name="app_launch_open_domain_urls_summary">Otvárať bez opýtania</string>
     <string name="app_launch_open_domain_urls_title">Otvoriť podporované odkazy</string>
@@ -487,7 +487,7 @@ Správca môže sledovať a spravovať nastavenia, prístup, aplikácie a údaje
     <string name="app_ops_never_used">(Nikdy nepoužité)</string>
     <string name="app_ops_running">Spustené</string>
     <string name="app_ops_settings">Fungovanie aplikácií</string>
-    <string name="app_ops_settings_summary">Zobraziť alebo zmeniť práva apl.</string>
+    <string name="app_ops_settings_summary">Zobraziť alebo zmeniť práva aplikácie</string>
     <string name="app_overlay_permission_preference">Povolenie na vykreslenie aplikácie navrchu</string>
     <string name="app_permission_summary_allowed">Povolené</string>
     <string name="app_permission_summary_not_allowed">Nie je povolené</string>
@@ -1148,7 +1148,7 @@ Nikdy ste neboli pripojený k %2$s."</string>
     <string name="builtin_keyboard_settings_summary">Nastavenie fyzickej klávesnice</string>
     <string name="builtin_keyboard_settings_title">Fyzická klávesnica</string>
     <string name="button_disconnect_network">Odpojiť od siete</string>
-    <string name="button_light_timeout">Doba podsvietenia tlač.</string>
+    <string name="button_light_timeout">Doba podsvietenia tlačidiel</string>
     <string name="button_text_accept">Prijať</string>
     <string name="button_text_accept_timer">Prijať (%d)</string>
     <string name="button_text_cancel">Zrušiť</string>
@@ -1749,7 +1749,7 @@ Toto nastavenie ovplyvní všetkých používateľov tohto telefónu."</string>
     <string name="deny">Odmietnuť</string>
     <string name="deny_sms_message">Zakázať odosielanie SMS správ</string>
     <string name="deny_sms_title">Zablokovať SMS</string>
-    <string name="detail_app_button">Informácie o apl.</string>
+    <string name="detail_app_button">Informácie o aplikácii</string>
     <string name="detail_question">Podrobnosti</string>
     <string name="details_subtitle">Podrobnosti používania</string>
     <string name="details_title">Podrobnosti používania</string>
@@ -4088,7 +4088,7 @@ Vyberte váš operačný systém:"</string>
     <string name="network_assistant">Spotreba dát</string>
     <string name="network_changed_noti_summary">Používanie mobilných dát</string>
     <string name="network_changed_noti_title">Odpojiť od Wi-Fi</string>
-    <string name="network_control">Zobraziť nastavenie apl.</string>
+    <string name="network_control">Zobraziť nastavenie aplikácie</string>
     <string name="network_detail">Detail siete %s</string>
     <string name="network_error">Nastala chyba siete</string>
     <string name="network_operators_settings">Sieťoví operátori</string>
@@ -4245,7 +4245,7 @@ Vyberte váš operačný systém:"</string>
     <string name="notification_ringtone_title">Predvolený tón upozornení</string>
     <string name="notification_section_header">Upozornenie</string>
     <string name="notification_settings">Upozornenia</string>
-    <string name="notification_settings_apps_title">Upozornenia apl.</string>
+    <string name="notification_settings_apps_title">Upozornenia aplikácií</string>
     <string name="notification_shade_shortcut_title">Skratka roletky</string>
     <string name="notification_sound_dialog_title">Zvoliť vyzváňací tón oznámení</string>
     <string name="notification_sound_title">Predvolené oznámenie</string>
@@ -4688,7 +4688,7 @@ Táto funkcia získa vašu MAC adresu Wi-Fi siete iba na počiatočnú registrá
     <string name="preferred_network_type_summary">LTE (odporúčané)</string>
     <string name="preferred_network_type_title">Preferovaný typ siete</string>
     <string name="preferred_sms_settings">Táto aplikácia bude nastavená ako predvolená pre príjem a odosielanie SMS správ.</string>
-    <string name="preferred_sms_title">Predvolená apl. SMS Správ</string>
+    <string name="preferred_sms_title">Predvolená aplikácia SMS Správ</string>
     <string name="preferred_sms_warning_message">Použitie \"%1$s\" môže navýšiť vaše poplatky alebo ohroziť vaše súkromie.</string>
     <string name="preferred_sms_warning_use_system">Zrušiť</string>
     <string name="preview_pager_content_description">Náhľad</string>
@@ -4764,7 +4764,7 @@ Táto funkcia získa vašu MAC adresu Wi-Fi siete iba na počiatočnú registrá
     <string name="privacy_mode_dialog_title">Režim Návštevník</string>
     <string name="privacy_mode_enable_sum">Ukryť správy, poznámky, fotografie, nastavenia, a prichádzajúce hovory</string>
     <string name="privacy_mode_enable_title">Režim súkromia</string>
-    <string name="privacy_mode_summary">Uzamknúť jednotlivé apl. alebo ukryť osobné informácie</string>
+    <string name="privacy_mode_summary">Uzamknúť jednotlivé aplikácie alebo ukryť osobné informácie</string>
     <string name="privacy_mode_title">Nastavenie súkromia</string>
     <string name="privacy_notes">Poznámky</string>
     <string name="privacy_password">Heslo ochrany súkromia</string>
@@ -5192,9 +5192,9 @@ Toto nastavenie ovplyvní všetkých používateľov tohto telefónu."</string>
     <string name="screen_monochrome_mode_apps_loading">Načítavanie...</string>
     <string name="screen_monochrome_mode_apps_title">Použiť Čiernobiely režim</string>
     <string name="screen_monochrome_mode_global_summary">Použiť Čiernobiely režim pre všetky apl.</string>
-    <string name="screen_monochrome_mode_global_title">Všetky apl.</string>
+    <string name="screen_monochrome_mode_global_title">Všetky aplikácie</string>
     <string name="screen_monochrome_mode_local_summary">Použiť Čiernobiely režim pre vybrané apl.</string>
-    <string name="screen_monochrome_mode_local_title">Vybrané apl.</string>
+    <string name="screen_monochrome_mode_local_title">Vybrané aplikácie</string>
     <string name="screen_monochrome_mode_off_apps_title">Nepoužiť Čiernobiely režim</string>
     <string name="screen_monochrome_mode_set_apps_title">Apl. v Použiť Čiernobielom režime</string>
     <string name="screen_monochrome_mode_summary">Prepnúť do Čiernobielého režimu pre zníženie spotreby batérie</string>
@@ -5206,7 +5206,7 @@ Toto nastavenie ovplyvní všetkých používateľov tohto telefónu."</string>
     <string name="screen_optimize_disabled">Ak je povolený režim čítania, nie je možné zmeniť kontrast</string>
     <string name="screen_paper_mode_adjust_level">Prispôsobiť čítací režim</string>
     <string name="screen_paper_mode_apps_loading">Načítavanie...</string>
-    <string name="screen_paper_mode_apps_title">Použiť čítací režim pre tieto apl.</string>
+    <string name="screen_paper_mode_apps_title">Použiť čítací režim pre tieto aplikácie</string>
     <string name="screen_paper_mode_description">Čítací režim upravuje farby a textúry položiek na displeji</string>
     <string name="screen_paper_mode_global_summary">Použiť čítací režim na všetky aplikácie</string>
     <string name="screen_paper_mode_global_title">Všetky aplikácie</string>
@@ -6253,7 +6253,7 @@ Zvážte použitie rýchlejšieho zariadenia (^1) s lepšou výkonnosťou."</str
     <string formatted="false" name="system_alert_window_summary">Vykreslenie cez ďalšie aplikácie je povolené pre %d z %d aplikácií</string>
     <string name="system_and_device_section_title">Systém a zariadenie</string>
     <string name="system_app_settings">Systémové aplikácie</string>
-    <string name="system_apps_updater">Aktualizácia systémových apl.</string>
+    <string name="system_apps_updater">Aktualizácia systémových aplikácií</string>
     <string name="system_backup_section_title">Záloha</string>
     <string name="system_backup_section_title_new">Zálohovať alebo obnoviť</string>
     <string name="system_haptic_feedback">Hmatová odozva</string>
@@ -6484,11 +6484,11 @@ Zvážte použitie rýchlejšieho zariadenia (^1) s lepšou výkonnosťou."</str
     <string name="uninstall_dlg_msg">Odinštalovanie vymaže všetky dáta aplikácie.</string>
     <string name="uninstall_dlg_title">Odinštalovať teraz?</string>
     <string name="uninstall_protected_dlg_msg">Odinštalovanie systémových aplikácií môže spôsobiť nesprávne fungovanie MIUI systému. Chcete túto aplikáciu aj napriek tomu odinštalovať?</string>
-    <string name="uninstall_protected_dlg_title">Odinštalovanie systémových apl.</string>
+    <string name="uninstall_protected_dlg_title">Odinštalovanie systémových aplikácií</string>
     <string name="uninstall_text">Odinštalovať</string>
     <string name="uninstall_wifi_master_key">Odinštalovať Wi-Fi Master Key</string>
     <string name="uninstall_with_xspace_app_dlg_msg">Korešpondujúce klonované aplikácie budú spolu odstránené aj s ich dátami.</string>
-    <string name="uninstall_xspace_app_dlg_msg">Odinštalovanie klonovaných apl. vymaže všetky ich dáta.</string>
+    <string name="uninstall_xspace_app_dlg_msg">Odinštalovanie klonovaných aplikácií vymaže všetky ich dáta.</string>
     <string name="uninstall_xspace_app_dlg_title">Odinštalovať klonované aplikácie?</string>
     <string name="unknown">Neznáme</string>
     <string name="unknown_app">Neznáma aplikácia</string>
@@ -6838,7 +6838,7 @@ Ktorýkoľvek používateľ môže akceptovať aktualizované povolenia aplikác
     <string name="verify_applications">Overiť aplikácie</string>
     <string name="verify_applications_summary">Zakázať inštaláciu škodlivých aplikácií alebo na ne upozorniť</string>
     <string name="verify_apps_over_usb_summary">Kontrolovať škodlivosť aplikácií nainštalovaných pomocou nástroja ADB/ADT.</string>
-    <string name="verify_apps_over_usb_title">Overiť apl. inštalované cez USB</string>
+    <string name="verify_apps_over_usb_title">Overiť aplikácie inštalované cez USB</string>
     <string name="version_text">Verzia %1$s</string>
     <string name="vibrate_category_title">Vibrácie</string>
     <string name="vibrate_in_normal_title">Vždy vibrovať</string>
@@ -6983,7 +6983,7 @@ Ktorýkoľvek používateľ môže akceptovať aktualizované povolenia aplikác
     <string name="vpn_username">Užívateľské meno</string>
     <string name="vpn_version">Verzia %s</string>
     <string name="wait_for_debugger">Čakať na ladiaci nástroj</string>
-    <string name="wait_for_debugger_summary">Apl. na ladenie čaká na pripojenie lad. nástroja</string>
+    <string name="wait_for_debugger_summary">Aplikácia na ladenie čaká na pripojenie lad. nástroja</string>
     <string name="wake_suppression_summary">Vaše zariadenie bude reagovať na nechcené dotyky</string>
     <string name="wake_suppression_title">Malá plocha</string>
     <string name="wakeup_and_sleep_settings_category_name">Nastavenie zámku obrazovky</string>
