--- a/Slovak/main/MiuiAod.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiAod.apk/res/values-sk/strings.xml
@@ -257,4 +257,6 @@ N e"</string>
     <string name="wednesday">Streda</string>
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
+    
+    <string name="theme_manager_other">Viac položiek</string>    
 </resources>
